--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,137 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+
+:root {
+    --box-shadow: 5px 5px 10px rgba(0,0,0, 0.5)
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+* {
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+    font: 400 18px 'Josefin Sans', sans-serif;
+    color: white;
+    background: #e1f4f3;    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main-container {
+    margin: auto;
+    width: 1000px;
+    background: #3f3f3f;
+    
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 50px;
+    box-shadow: var(--box-shadow);
 }
 
-.App-link {
-  color: #61dafb;
+.brasil h1 {
+    font-size: 48px;
+    color: #e1f4f3;
+    margin-bottom: 15px;  
+    margin-top: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.brasil-dados {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; 
+    justify-items: center;   
+    text-justify: center;
+}
+
+.brasil-dados-casos {    
+    align-self: center; 
+}
+
+.brasil-dados-casos p {
+    margin-bottom: 5px;
+    font-size: 12px;
+}
+
+.confirmados {
+    color: rgb(209, 214, 137);
+}
+
+.mortes {
+    color: rgb(214, 137, 137);
+}
+
+.recuperados {
+    color: rgb(137, 214, 163);
+}
+
+.estados {
+    margin-top: 50px;
+}
+
+.estados ul {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 15px;
+}
+
+.estados ul li {
+    background: white;    
+    background: #333;
+    box-shadow: var(--box-shadow);
+    padding: 25px;
+}
+
+.estados ul li h2 {
+    margin-bottom: 15px;
+}
+
+.estados ul li p {
+    margin: 5px;
+    font-size: 10px;
+}
+
+.search {
+    margin-top: 30px;
+}
+
+.search input {
+    height: 30px;
+    padding: 0 15px;
+    font: 400 14px 'Josefin Sans', sans-serif;
+    border: 0;
+    border-radius: 15px; 
+    box-shadow: var(--box-shadow);
+    margin-right: 10px;   
+}
+
+.search button {
+    cursor: pointer;
+    height: 30px;
+    padding: 0 15px;
+    border: 0;
+    border-radius: 15px;
+    font: 700 14px 'Josefin Sans', sans-serif;
+    box-shadow: var(--box-shadow);
+    transition: filter .5s;
+    background: rgb(137, 214, 163);
+    color: white;
+}
+
+.search button:hover {
+    filter: brightness(50%)
+}
+
+.main-container h6 {
+    color: #ccc;
+    margin-top: 50px;
+    font-size: 10px;    
+}
+
+.main-container a {
+    color: white;
+    text-decoration: none;
+    font: 700;
 }
